Update of the implementation for linking devices to groups and its respective yaml documentation
